--- a/index.html
+++ b/index.html
@@ -2,80 +2,69 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Triffid Variable Font Tester</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <main class="tester">
+  <div class="tester">
 
-    <!-- Weight Axis Test -->
+    <!-- Weight Tester -->
     <section class="test-box">
-      <div class="sample" contenteditable="true" id="weightSample">Triffid</div>
-      <div class="sliders">
-        <label>
-          Size
-          <input type="range" id="weightSize" min="16" max="88" value="80" />
-        </label>
-        <label>
-          Tracking
-          <input type="range" id="weightTrack" min="0" max="300" value="0" />
-        </label>
-        <label>
-          Weight
+      <div class="controls">
+        <div class="control-group">
+          <label for="weightSlider">Weight</label>
           <input type="range" id="weightSlider" min="100" max="900" value="400" />
-        </label>
+        </div>
+        <div class="control-group">
+          <label for="weightSize">Size</label>
+          <input type="range" id="weightSize" min="16" max="160" value="80" />
+        </div>
       </div>
+      <div class="sample" contenteditable="true" id="weightSample">Triffid</div>
     </section>
 
-    <!-- Carnivore Axis Test -->
+    <!-- Carnivore Tester -->
     <section class="test-box">
-      <div class="sample" contenteditable="true" id="crnvSample">Triffid</div>
-      <div class="sliders">
-        <label>
-          Size
-          <input type="range" id="crnvSize" min="16" max="88" value="80" />
-        </label>
-        <label>
-          Tracking
-          <input type="range" id="crnvTrack" min="0" max="300" value="0" />
-        </label>
-        <label>
-          Carnivore
-          <input type="range" id="crnvSlider" min="0" max="900" value="0" />
-        </label>
+      <div class="controls">
+        <div class="control-group">
+          <label for="crnvSlider">Carnivore</label>
+          <input type="range" id="crnvSlider" min="0" max="100" value="0" />
+        </div>
+        <div class="control-group">
+          <label for="crnvSize">Size</label>
+          <input type="range" id="crnvSize" min="16" max="160" value="80" />
+        </div>
       </div>
+      <div class="sample" contenteditable="true" id="crnvSample">Triffid</div>
     </section>
 
-  </main>
+  </div>
 
   <script>
     const weightSample = document.getElementById('weightSample');
     const weightSize = document.getElementById('weightSize');
-    const weightTrack = document.getElementById('weightTrack');
     const weightSlider = document.getElementById('weightSlider');
 
     const crnvSample = document.getElementById('crnvSample');
     const crnvSize = document.getElementById('crnvSize');
-    const crnvTrack = document.getElementById('crnvTrack');
     const crnvSlider = document.getElementById('crnvSlider');
 
     function updateWeightSample() {
       weightSample.style.fontSize = `${weightSize.value}px`;
-      weightSample.style.letterSpacing = `${weightTrack.value / 100}em`;
-      weightSample.style.fontVariationSettings = `"wght" ${weightSlider.value}`;
+      weightSample.style.fontVariationSettings = `'wght' ${weightSlider.value}`;
     }
 
     function updateCrnvSample() {
       crnvSample.style.fontSize = `${crnvSize.value}px`;
-      crnvSample.style.letterSpacing = `${crnvTrack.value / 100}em`;
-      crnvSample.style.fontVariationSettings = `"CRNV" ${crnvSlider.value}`;
+      crnvSample.style.fontVariationSettings = `'CRNV' ${crnvSlider.value}`;
     }
 
-    [weightSize, weightTrack, weightSlider].forEach(input => {
+    [weightSize, weightSlider].forEach(input => {
       input.addEventListener('input', updateWeightSample);
     });
 
-    [crnvSize, crnvTrack, crnvSlider].forEach(input => {
+    [crnvSize, crnvSlider].forEach(input => {
       input.addEventListener('input', updateCrnvSample);
     });
 
@@ -84,3 +73,4 @@
   </script>
 </body>
 </html>
+
