--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
     <!-- Weight Tester -->
     <section class="test-box">
-      <div class="controls">
+      <div class="controls inline-controls">
         <div class="control-group">
           <label for="weightSlider">Weight</label>
           <input type="range" id="weightSlider" min="100" max="900" value="400" />
         </div>
         <div class="control-group">
           <label for="weightSize">Size</label>
-          <input type="range" id="weightSize" min="16" max="160" value="80" />
+          <input type="range" id="weightSize" min="24" max="200" value="80" />
         </div>
       </div>
       <div class="sample" contenteditable="true" id="weightSample">Triffid</div>
@@ -26,14 +26,14 @@
 
     <!-- Carnivore Tester -->
     <section class="test-box">
-      <div class="controls">
+      <div class="controls inline-controls">
         <div class="control-group">
           <label for="crnvSlider">Carnivore</label>
           <input type="range" id="crnvSlider" min="0" max="100" value="0" />
         </div>
         <div class="control-group">
           <label for="crnvSize">Size</label>
-          <input type="range" id="crnvSize" min="16" max="160" value="80" />
+          <input type="range" id="crnvSize" min="24" max="200" value="80" />
         </div>
       </div>
       <div class="sample" contenteditable="true" id="crnvSample">Triffid</div>
@@ -73,4 +73,5 @@
   </script>
 </body>
 </html>
+
 
